css/main.css
@charset "utf-8";

@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

* {
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

html {
	-moz-text-size-adjust: 100%;
	-ms-text-size-adjust: 100%;
	-webkit-text-size-adjust: 100%;
	text-size-adjust: 100%;
    font-size: 100%;
    font-family: helvetica, Times, serif;
}

img {
	width: 100%;
    display: block;
}

body {
    margin: 0;
    padding: 0; 
}

.line-height {
    line-height: 1rem;
}

.homepage {
    padding: 1rem;
}

.gutter { 
    padding-left: 1em;
    padding-top: 1em;
    padding-right: 1em;
}

a:focus {
    outline: 3px solid purple;
}

.skip-links {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.skip-links a {
    position: absolute;
    top: -3em;
    background-color: #000;
    color: #fff;
    text-decoration: none;
    padding: 0.5em 0.75em;
    font-size: 1.24em;
}

.skip-links a:focus {
    top: 0;
}

article {
    padding: 0;
    overflow: hidden;   
}

.title {
    margin:0;
}

header {
    overflow: hidden;
    background-color: black ;
    height: 4rem;
}

.profile-picture {
    height: 4rem;
    width: auto;
    display: block;
    float: left;
    margin: 0 0 0 1em;
    padding-right: 4%
}

.banner {
    padding-top: 0;
    margin: 0;
    overflow: hidden;
    position: relative;
    height: 18em;
    background-size: cover;
    background-position: center center;
    position: relative;
    text-align: center;
}

.banner-title {
    text-align: center;
    color: white;
}

.banner-img {
    -webkit-filter: blur(3px);
    filter: blur(3px);
}

p {
    line-height: 3rem;
    font-size: 1rem;
}

h1 {
    font-size: 2rem;
    border: solid 2px white;
    color: white;
    text-align: center;
    position: absolute;
    bottom: 50%;
    left:0;
    right:0;
    margin-left:auto;
    margin-right:auto;
}

h2 {
    background-color: black;
    font-size: 1.5rem;
    margin: 2rem 20%;
    color: #fff; 
    text-align: center;
    padding: .5rem 5%;
}

h3 {
    
    font-size: 1rem;
    margin: 2rem 20%;
    color: black; 
    text-align: center;
    padding: .5rem 5%;
}

.nav-top {
	max-height: 0; 
    overflow: hidden;
	-moz-transition: all 250ms linear;
	-o-transition: all 250ms linear;
	-webkit-transition: all 250ms linear;
	transition: all 250ms linear;
    width: 100%;
    margin: 0;
}

.nav-top ul { 
	margin: 0;
    padding:0;
    list-style-type: none;   
}

.social-media {
    padding: 2em 0;
    overflow: hidden;
}

.social-media a {
    float: left;
    width: 30%;
    padding: 0;
    margin: 0 5% 0 0;
    display: inline-block;
    text-align: center;
}

.social-media img {
    width: 40px;
    margin: 0 auto;
}

.social-media a:nth-child(3){
    margin: 0;
}

.contact-info {
  overflow: visible;

}

.navtop {
        text-align: center;
    }

    .top { 
        padding-top: 1%;
        padding-right: 6%;
        padding-bottom: 0;
    }
    
     .navtop li {
        display: inline-block;
        border: 0;
    }

    li .top {
        padding-botom: 0.5rem;
    }
}

@media only screen and (min-width: 50em) {
    
    .nav {
        float: left;
    }
    
    .nav-right {
        float: right;
        padding-right: 1em;    
    }
    
    span {
       display: inline;
   } 
    
     .footerspan {
        display:inline-block;
}    
    
    .top { 
        padding-top: 2%;
        padding-right: 6%;
        padding-bottom: 0;
    }
    
}

.navtop {
    padding-top: 2%;
    list-style-type: none;
}

.navtop a,
.navtop a:visited{
    text-decoration:none;
    color: white;
}

.navtop a:hover,
.navtop a:focus,
.navtop a:active, 
.navtop .nav-current,
.navtop .nav-current:link,
.navtop .nav-current:visited {
    background-color:  red;
    color: #fff;
}

@media only screen and (min-width: 22em) {
    
    .nav li {
        display: inline-block;
        border: 0;
    }
    
    .nav {
        text-align: center;
    }
    
    center {
        text-align:center;   
}
    
    fspan {
       display: inline;
   } 
    
    .footerspan {
        display:inline-block;
}
    
footer {
    background-color: #fff;
    margin: 1.5rem auto;
    height: 8em;
    overflow: hidden;
    border-top: solid black 1em;
}

ul {
    padding:0;
    margin:0;
    padding: 0 1rem;
    padding-bottom: 1.5rem;
}

.desc-img {
    width: 100%;
    position:relative;
}

.img-flex {
    width:100%;
}

.copyright {
    color: black;
    position: absolute;
    padding-top: 1em;
}

@media only screen and (min-width: 25em){

    .nav-top {
        max-height: 5em;
        text-align: center;
    }
    
    .nav-top ul{
        position: static;
        display: inline;     
    }
    
    .nav-top a {
        display: inline-block;
        font-size: 1em;
    }
        
    .nav-top li {
        display: inline-block;
        margin: 0.5em;
        padding: 1em;
      padding-right: 6%
    }
    
    .nav-btn {
        display: none;
    }
}



body {
    line-height: 1;
}

.art-pieces {

}
  .no-js .defer-image {
    display: none;
}

